manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
spec:
  selector:
    app: website
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
